--- a/index.Rmd
+++ b/index.Rmd
@@ -68,11 +68,12 @@ To view my resume, you can click [here](images/resume_nosite.pdf).
 **I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.** I incorporated projects that highlight my various competencies, including:
 
 * Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)
-* Ability to write scientific or research papers
+* Fluency in data science skills - EDA, data wrangling, data visualization
 * Understanding of how to clean, manipulate, and analyze data
 * Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)
+* Ability to write scientific or research papers
 
-Note that all projects use hypothetical data, with the exception of the NHANES projects.
+Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.
 
 <br> 
 
