--- a/index.Rmd
+++ b/index.Rmd
@@ -57,15 +57,16 @@ Columbia University Mailman School of Public Health
 
 #### About Me
 
-I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, programmer, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.
+I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University's Mailman School of Public Health pursuing an Applied Biostatistics certificate with an expected graduation date of May 2019. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist and analyst roles. I am currently seeking these positions, or any that sufficiently develops or hones my: ability to work with and manipulate data, analytic mindset, programming/coding capability, statistical skills, and/or knowledge of research methods.
 
-To view my resume, you can click [here](images2/resume.pdf).
+
+Next Steps: I worked hard to familiarize myself with R, SAS, and SQL, and I am always willing to learn new analytic tools, languages, and programs to become better at what I want to do! My next steps are to learn Tableau and Python (numPy, pandas).
 
 <br>
 
 #### Website
 
-**I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.** I incorporated projects that highlight my various competencies, including:
+I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years. I incorporated projects that highlight my various competencies, including:
 
 * Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)
 * Fluency in data science skills - EDA, data wrangling, data visualization
@@ -73,7 +74,7 @@ To view my resume, you can click [here](images2/resume.pdf).
 * Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)
 * Ability to write scientific or research papers
 
-Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.
+**You can view my [resume](images2/resume.pdf) for a more in-depth look at my skills.**
 
 <br> 
 
@@ -91,4 +92,4 @@ Phone: 917-216-1621
 Copyright © 2019 Jacky Choi
 
 All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever
-without the express written permission of the author.
+without the express written permission of the author. Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.
